add transmitter interface to lib
Signed-off-by: XinYao1994 <xyao@cs.hku.hk>

update from zhiwei

Signed-off-by: XinYao1994 <xyao@cs.hku.hk>
Signed-off-by: Jie Pu <pujie2@huawei.com>

--- a/lib/requirements.txt
+++ b/lib/requirements.txt
@@ -13,3 +13,17 @@ pandas~=1.1.5  # BSD
 six~=1.15.0  # MIT
 minio~=7.0.3  # Apache-2.0
 uvicorn~=0.14.0  # BSD
+yapf
+mypy
+pylint
+python-socketio
+aiohttp
+requests
+matplotlib
+scipy
+wandb
+gym
+datasets
+transformers
+tensorflow
+tensorflow-datasets
