--- a/lib/requirements.txt
+++ b/lib/requirements.txt
@@ -27,3 +27,7 @@ datasets
 transformers
 tensorflow
 tensorflow-datasets
+-f https://download.pytorch.org/whl/torch_stable.html 
+torch==1.7.1+cpu 
+-f https://download.pytorch.org/whl/torch_stable.html
+torchvision==0.2.2.post3
