Add mistnet example and fix some bugs when running mistnet
Signed-off-by: XinYao1994 <xyao@cs.hku.hk>
Signed-off-by: Jie Pu <pujie2@huawei.com>

--- a/examples/federated_learning/surface_defect_detection/training_worker/config.yml
+++ b/examples/federated_learning/surface_defect_detection/training_worker/config.yml
@@ -2,11 +2,11 @@ clients:
     # Type
     type: simple
 
-    # The total number of clients, server
-    total_clients: 0
+    # The total number of clients
+    total_clients: 3
 
     # The number of clients selected in each round
-    per_round: 2
+    per_round: 1
 
     # Should the clients compute test accuracy locally?
     do_test: true
